--- a/lesson_12/css/style.css
+++ b/lesson_12/css/style.css
@@ -13,7 +13,7 @@
 h2 {
 	text-align: center;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-style: 30px;
+	font-size: 30px;
 	font-weight: 700;
 	color: #fff;
 	text-transform: uppercase;
