--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -294,28 +294,28 @@ body {
 
 @media (max-width: 425px) {
 
-	.header__item {
-		padding: 10px 0;
-		row-gap: 10px;
+	.header {
+		position: relative;
+		background: linear-gradient(55.95deg, rgba(255, 64, 58, 0.2) 0%, rgba(247, 94, 5, 0.2) 100%);
 	}
 
-	.header .button {
-		padding: 10px 12px;
-		font-size: 10px;
+	.header__item {
+		flex-direction: column;
+	}
+
+	.header__menu {
+		flex-grow: 1;
 	}
 
 	.menu__body {
-		gap: 20px;
-		justify-content: space-between;
+		display: flex;
+		flex-direction: column;
 	}
 
-	.action {
-		padding-right: 15px;
-	}
-
-	.action__title {
-		font-size: 20px;
-		margin-bottom: 10px;
+	.header__action {
+		flex-direction: column;
+		margin: 0 auto;
+		align-items: center;
 	}
 
 	.createx .button {
@@ -324,13 +324,17 @@ body {
 	}
 
 	.createx {
-		padding: 150px 0 50px 0;
+		padding: 50px 0 50px 0;
 	}
 
 	.createx__item {
+		flex-direction: column-reverse;
 		margin-bottom: 50px;
 	}
 
+	.createx__image {
+		margin-bottom: 20px;
+	}
 
 	.achievement__value {
 		font-size: 30px;
