--- a/lesson_18/css/style.css
+++ b/lesson_18/css/style.css
@@ -29,24 +29,24 @@ body {
 
 .header__item {
 	display: grid;
-	grid-template-columns: auto 1fr auto;
+	grid-template-columns: 130px 1fr auto;
 	align-items: center;
 	column-gap: 60px;
 	padding: 20px 0;
 }
 
 .header__logo {
-	height: 100%;
+	max-width: 130px
 }
 
 .header__logo img {
-	width: 100%;
+	max-width: 100%;
 
 }
 
 .header__action {
 	display: grid;
-	grid-template-columns: 1fr auto;
+	grid-template-columns: 207px 144px;
 	row-gap: 10px;
 	column-gap: 36px;
 }
@@ -85,11 +85,17 @@ body {
 	color: #FF3F3A;
 }
 
-
-
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
 	.header__item {
-		grid-template-columns: auto 1fr;
+		column-gap: 20px;
+	}
+
+
+}
+
+@media (max-width: 930px) {
+	.header__item {
+		grid-template-columns: 130px 1fr;
 		grid-template-rows: 1fr auto;
 		column-gap: 60px;
 		row-gap: 10px;
@@ -97,33 +103,44 @@ body {
 
 	.header__action {
 		grid-column: 2 / 3;
-		grid-template-columns: auto auto;
 	}
 
 }
 
-@media (max-width: 425px) {
+@media (max-width: 768px) {
+	.header__action {
+		column-gap: 10px;
+		grid-column: 1 / 3;
+	}
+}
+
+@media (max-width: 650px) {
 	.header {
 		position: relative;
 		background: linear-gradient(55.95deg, rgba(255, 64, 58, 0.2) 0%, rgba(247, 94, 5, 0.2) 100%);
 	}
 
 	.header__item {
+		grid-template-rows: 1fr;
 		grid-template-columns: 1fr;
-		grid-template-rows: auto 1fr 1fr;
-		column-gap: 60px;
-		row-gap: 10px;
+		justify-items: center;
 	}
 
 	.menu__list {
 		grid-template-columns: 1fr;
 		grid-template-rows: repeat(5, 1fr);
-		justify-self: center;
+		justify-items: center;
 	}
 
 	.header__action {
+		grid-template-rows: 1fr;
+		grid-template-columns: 1fr;
 		grid-column: 1/2;
-		grid-template-columns: auto auto;
+		justify-items: center;
+	}
+
+	.createx {
+		padding: 50px 0;
 	}
 
 }
@@ -236,7 +253,7 @@ body {
 .action__button {
 	display: grid;
 	grid-template-rows: 1fr;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 207px 207px;
 	gap: 24px;
 }
 
@@ -289,10 +306,22 @@ body {
 	}
 }
 
+@media (max-width: 1150px) {
+	.createx__action {
+		padding-right: 15px;
+	}
+}
+
+@media (max-width: 900px) {
+	.action__title {
+		font-size: 40px;
+	}
+}
+
 @media (max-width: 768px) {
 	.action__button {
 		display: grid;
-		grid-template-columns: 1fr;
+		grid-template-columns: 207px;
 		gap: 24px;
 		font-size: 12px;
 	}
@@ -303,7 +332,7 @@ body {
 
 }
 
-@media (max-width: 425px) {
+@media (max-width: 650px) {
 	.createx {
 		padding: 50px 0;
 	}
