--- a/lesson_20/css/style.css
+++ b/lesson_20/css/style.css
@@ -1041,7 +1041,7 @@ h6 {
 
 .item-benefits__title {
   font-weight: 900;
-  line-height: 1, 3;
+  line-height: 1.3;
   color: #1E212C;
   margin-bottom: 1.5rem;
 }
