--- a/matoa/css/style.css
+++ b/matoa/css/style.css
@@ -167,7 +167,7 @@ h6 {
 }
 
 body {
-  background-color: #E5E5E5;
+  background-color: #F7F6F4;
 }
 
 .lock body {
@@ -488,6 +488,7 @@ body::after {
 }
 
 .title {
+  position: relative;
   font-family: "Taviraj";
   font-weight: 500;
   font-size: 2.25rem;
@@ -521,7 +522,7 @@ body::after {
 .title--white {
   font-weight: 600;
   font-size: 1.5rem;
-  line-height: 1.7;
+  line-height: 1.1;
   /* 41/24 */
   color: #FFFFFF;
 }
@@ -533,7 +534,12 @@ body::after {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(247, 246, 244, 0.9);
+  z-index: 50;
 }
 
 .header__container {
@@ -682,9 +688,349 @@ body::after {
   display: none;
 }
 
+.footer {
+  background-color: #D84727;
+  color: #FFFFFF;
+  font-family: "Taviraj";
+  overflow: hidden;
+}
+
+.footer__container {
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (auto)[4];
+  grid-template-columns: repeat(4, auto);
+}
+
+.footer__container::before,
+.footer__container::after {
+  content: "";
+  position: absolute;
+  width: 25.8125rem;
+  height: 17.5rem;
+  background: url("../img/footer/decor.svg") 0 0/100% no-repeat;
+}
+
+.footer__container::after {
+  left: 0;
+  /* 182/413 */
+  top: 50%;
+  -webkit-transform: translate(calc((44% - 15px) * -1), 0);
+      -ms-transform: translate(calc((44% - 15px) * -1), 0);
+          transform: translate(calc((44% - 15px) * -1), 0);
+}
+
+.footer__container::before {
+  right: 0;
+  top: calc(-13% - 51px);
+  -webkit-transform: translate(calc(40% + 30px), 0);
+      -ms-transform: translate(calc(40% + 30px), 0);
+          transform: translate(calc(40% + 30px), 0);
+}
+
+.footer__column {
+  position: relative;
+  z-index: 5;
+}
+
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 1.6875rem;
+}
+
+.footer__logo img {
+  width: 100%;
+}
+
+.footer__label:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.footer__title {
+  margin-bottom: 0.125rem;
+}
+
+.footer__item {
+  width: 100%;
+  text-align: left;
+  position: relative;
+  margin-bottom: 1rem;
+  cursor: default;
+}
+
+.footer__item::before {
+  position: absolute;
+  font-size: 1.25rem;
+}
+
+.footer__text {
+  line-height: 1.68;
+  /* 27/16 */
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+}
+
+.footer__contact {
+  display: -ms-grid;
+  display: grid;
+  -webkit-column-gap: 0.625rem;
+     -moz-column-gap: 0.625rem;
+          column-gap: 0.625rem;
+  row-gap: 0.5rem;
+  -ms-grid-columns: minmax(auto, 6.25rem);
+  grid-template-columns: minmax(auto, 6.25rem);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.footer__social {
+  -ms-grid-column-span: 2;
+  grid-column: span 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 1rem;
+  gap: 1.5625rem;
+  font-size: 2rem;
+}
+
+.footer__social a {
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.title-footer {
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 1.4;
+  /* 28/20 */
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+}
+
+.menu-footer__item {
+  line-height: 200%;
+  /* 32/16 */
+  letter-spacing: 0.03em;
+}
+
+.menu-footer__link {
+  -webkit-transition: decoration 0.3s ease 0s;
+  -o-transition: decoration 0.3s ease 0s;
+  transition: decoration 0.3s ease 0s;
+}
+
+.main-slider {
+  padding-top: 10rem;
+  margin-bottom: 6.25rem;
+}
+
+.main-slider__slider {
+  position: relative;
+  padding-bottom: 55px;
+}
+
+.main-slider__slide {
+  background-color: #F1DDC9;
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2.9375rem;
+}
+
+.main-slider__arrows {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.9375rem;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-right: 1.9375rem;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+.main-slider__arrow {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 3.75rem;
+          flex: 0 0 3.75rem;
+  height: 3.75rem;
+  border: 2px solid #D84727;
+  font-size: 1.5rem;
+  color: #D84727;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.main-slider__arrow:first-child {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.slide-main__image-ibg_contain {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+  padding-bottom: 42%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-transform: translate(0, 3.375rem);
+      -ms-transform: translate(0, 3.375rem);
+          transform: translate(0, 3.375rem);
+  /* 477/1110 */
+}
+
+.slide-main__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 33.0625rem;
+}
+
+.slide-main__title {
+  font-family: "Taviraj";
+  font-size: 3.75rem;
+  line-height: 1.33;
+  /* 80/60 */
+  letter-spacing: 0.02em;
+  color: #333333;
+}
+
+.slide-main__title:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.slide-main__title::after {
+  content: "";
+  height: 0.0625rem;
+  width: 1.5833333333em;
+  margin-top: 0.2222222222em;
+  background-color: #333333;
+  display: block;
+}
+
+.slide-main__text {
+  line-height: 1.37;
+  /* 22/16 */
+  letter-spacing: 0.03em;
+  color: #333333;
+}
+
+.slide-main__text:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.slide-main__link {
+  display: inline-block;
+  font-family: "Taviraj";
+  font-weight: 600;
+  line-height: 1.68;
+  /* 27/16 */
+  letter-spacing: 0.03em;
+  color: #333333;
+}
+
+.slide-main__link:not(:last-child) {
+  margin-bottom: 2.75rem;
+}
+
+.slide-main__action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+
+.swiper {
+  overflow: hidden;
+}
+
+.swiper-wrapper {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.swiper-vertical .swiper-wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.swiper-autoheight .swiper-wrapper {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.swiper-initialized .swiper-slide {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.swiper-android .swiper-slide,
+.swiper-android .swiper-wrapper {
+  -webkit-transform: translate3d(0px, 0, 0);
+          transform: translate3d(0px, 0, 0);
+}
+
+.swiper-button-lock {
+  display: none !important;
+}
+
+@media (min-width: 47.99875em) {
+  .footer__item::before {
+    display: none;
+  }
+}
+
 @media (min-width: 71.25em) {
   .header__container {
     min-height: 6.625rem;
+  }
+
+  .footer {
+    padding-top: 3.1875rem;
+  }
+
+  .footer {
+    padding-bottom: 4.6875rem;
+  }
+
+  .footer__container {
+    gap: 1.875rem;
+  }
+
+  .main-slider__slide {
+    padding-top: 3.5rem;
+  }
+
+  .main-slider__slide {
+    padding-right: 2.9375rem;
+  }
+
+  .main-slider__slide {
+    padding-left: 0.9375rem;
   }
 }
 
@@ -728,12 +1074,55 @@ body::after {
   .header__container {
     min-height: 4.375rem;
   }
+
+  .footer {
+    padding-top: 1.25rem;
+  }
+
+  .footer {
+    padding-bottom: 1.25rem;
+  }
+
+  .footer__container {
+    gap: 0.9375rem;
+  }
+
+  .main-slider__slide {
+    padding-top: 1.25rem;
+  }
+
+  .main-slider__slide {
+    padding-right: 1.25rem;
+  }
+
+  .main-slider__slide {
+    padding-left: 0.625rem;
+  }
 }
 
 @media (max-width: 61.99875em) {
   .header__container {
     -ms-grid-columns: 9.375rem 1fr 9.375rem;
     grid-template-columns: 9.375rem 1fr 9.375rem;
+  }
+}
+
+@media (max-width: 59.375em) {
+  .footer__container {
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer__block {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .footer__column:first-child {
+    -ms-grid-column-span: 3;
+    grid-column: span 3;
   }
 }
 
@@ -839,6 +1228,30 @@ body::after {
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
   }
+
+  .footer__container {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .footer__block {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .footer__column:first-child {
+    text-align: center;
+    -ms-grid-column-span: 1;
+    grid-column: span 1;
+  }
+
+  .footer__item::before {
+    display: block;
+    top: 0;
+    right: 0;
+  }
 }
 
 @media (max-width: 47.99875em) and (max-width: 20em) {
@@ -863,6 +1276,78 @@ body::after {
 @supports not (min-height: clamp( 4.375rem , 3.4969512195rem  +  4.3902439024vw , 6.625rem )) {
     .header__container {
       min-height: calc(4.375rem + 2.25 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (padding-top: clamp( 1.25rem , 0.493902439rem  +  3.7804878049vw , 3.1875rem )) {
+    .footer {
+      padding-top: clamp( 1.25rem , 0.493902439rem  +  3.7804878049vw , 3.1875rem );
+    }
+}
+
+@supports not (padding-top: clamp( 1.25rem , 0.493902439rem  +  3.7804878049vw , 3.1875rem )) {
+    .footer {
+      padding-top: calc(1.25rem + 1.9375 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (padding-bottom: clamp( 1.25rem , -0.0914634146rem  +  6.7073170732vw , 4.6875rem )) {
+    .footer {
+      padding-bottom: clamp( 1.25rem , -0.0914634146rem  +  6.7073170732vw , 4.6875rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 1.25rem , -0.0914634146rem  +  6.7073170732vw , 4.6875rem )) {
+    .footer {
+      padding-bottom: calc(1.25rem + 3.4375 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (gap: clamp( 0.9375rem , 0.5716463415rem  +  1.8292682927vw , 1.875rem )) {
+    .footer__container {
+      gap: clamp( 0.9375rem , 0.5716463415rem  +  1.8292682927vw , 1.875rem );
+    }
+}
+
+@supports not (gap: clamp( 0.9375rem , 0.5716463415rem  +  1.8292682927vw , 1.875rem )) {
+    .footer__container {
+      gap: calc(0.9375rem + 0.9375 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (padding-top: clamp( 1.25rem , 0.3719512195rem  +  4.3902439024vw , 3.5rem )) {
+    .main-slider__slide {
+      padding-top: clamp( 1.25rem , 0.3719512195rem  +  4.3902439024vw , 3.5rem );
+    }
+}
+
+@supports not (padding-top: clamp( 1.25rem , 0.3719512195rem  +  4.3902439024vw , 3.5rem )) {
+    .main-slider__slide {
+      padding-top: calc(1.25rem + 2.25 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (padding-right: clamp( 1.25rem , 0.5914634146rem  +  3.2926829268vw , 2.9375rem )) {
+    .main-slider__slide {
+      padding-right: clamp( 1.25rem , 0.5914634146rem  +  3.2926829268vw , 2.9375rem );
+    }
+}
+
+@supports not (padding-right: clamp( 1.25rem , 0.5914634146rem  +  3.2926829268vw , 2.9375rem )) {
+    .main-slider__slide {
+      padding-right: calc(1.25rem + 1.6875 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (padding-left: clamp( 0.625rem , 0.5030487805rem  +  0.6097560976vw , 0.9375rem )) {
+    .main-slider__slide {
+      padding-left: clamp( 0.625rem , 0.5030487805rem  +  0.6097560976vw , 0.9375rem );
+    }
+}
+
+@supports not (padding-left: clamp( 0.625rem , 0.5030487805rem  +  0.6097560976vw , 0.9375rem )) {
+    .main-slider__slide {
+      padding-left: calc(0.625rem + 0.3125 * (100vw - 20rem) / 51.25);
     }
 }
 }
@@ -939,5 +1424,18 @@ body::after {
 
   .popup__close:hover {
     color: #D84727;
+  }
+
+  .footer__social a:hover {
+    color: hsla(0deg, 25%, 98%, 0.6);
+  }
+
+  .menu-footer__link:hover {
+    text-decoration: underline;
+  }
+
+  .main-slider__arrow:hover {
+    background-color: #D84727;
+    color: #fff;
   }
 }
